# ballpark

./: README.md  pyproject.toml
scripts/: spherize_robot_interactive.py
src/ballpark/: __init__.py  _config.py  _fcl_collision.py  _metrics.py  _refine.py  _robot.py  _warp_mesh_query.py
